2006-12-15  Akim Demaille  <akim@lrde.epita.fr>

	Shorten scopes
	* src/uexpression.cc: Here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Shorten scopes
	* src/uexpression.cc: here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Shorten scopes
	* src/uexpression.cc: here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	reuse name from UBlendType
	* src/uexpression.cc: here.
	* src/ucommand.cc: Formatting changes.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Put UCommandType in UCommand
	* src/utypes.hh (UCommandType): Rename as...
	* src/ucommand.hh (UCommand::Type): this.
	Adjust all callers.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Shorten scopes
	* src/uexpression.cc: here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Shorten scopes
	* src/uexpression.cc: here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Factor binaries
	* src/uexpression.cc: here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Do not allow string order-comparison
	* src/uexpression.cc: Here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Upgrade ENSURE_COMPARISON
	* src/uexpression.cc (ENSURE_COMPARISON): Be given e1 and e2.
	Adjust callers.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	EVAL_EXPR_COMPARISON
	* src/uexpression.cc: New.
	Use it.
	Shorten scopes.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	eval_EXPR_VARIABLE
	* src/uexpression.hh, src/uexpression.cc (eval_EXPR_VARIABLE): New.
	(eval): Extracted from here.
	(devicename, methodname): Remove, unused.
	(errSize): Remove, used, but useless.
	(errorString): Use a tighter scope.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Shrink the scope of ret
	* src/uexpression.cc: here.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Add braces
	* src/uexpression.cc: in this monster.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Formatting changes
	* src/parser/bison/ugrammar.y: here.
